...
            "state": "translated",
            "value": "Date"
          }
        }
      }
    },
    "Delete": {
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Supprimer"
          }
...
            "state": "translated",
            "value": "Réglages du groupe"
          }
        }
      }
    },
    "Groups": {
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Groupes"
          }
...
